--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-toast": "^1.2.15",
     "@rainbow-me/rainbowkit": "^2.2.9",
     "@tanstack/react-query": "^5.90.11",
-    "framer-motion": "^12.23.24",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.23.25",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.1",
+    "tailwind-merge": "^3.4.0",
     "viem": "^2.40.3",
     "wagmi": "^2.19.5"
   },
