--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-is": "^19.2.1",
     "react-router-dom": "^7.9.6",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0",
